Fix Y Overflow

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,7 @@
 [x-cloak] { display: none !important; }
 
 html{
+    overflow-y: auto !important;
     cursor: url(../../resources/images/cursors/default.png) , default !important;
     @apply text-black;
     background: rgb(255,207,171);
